# Execu-Torch-Snap-Know

./: .gitignore  MODEL_BUILD_GUIDE.md  Makefile  README.md  SETUP.md  export_whisper_tiny.py  rebuild_face_embedding_pt.py  requirements-dev.txt  settings.gradle.kts  setup.sh
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PUT_PTE_FILES_HERE.txt
app/src/main/assets/speech/: manifest.json
app/src/main/assets/speech/stt/whisper-tiny/: README.txt
app/src/main/assets/speech/tts/piper/: manifest.json
app/src/main/assets/speech/tts/piper/en_US-lessac-medium/: README.txt
app/src/main/assets/vlm/: PUT_SMOLVLM_ASSETS_HERE.txt  smolvlm_manifest.json
app/src/main/cpp/: executorch_jni.cpp
app/src/main/java/com/snapknow/app/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/snapknow/app/camera/: CameraHelper.kt  FaceAnalyzer.kt
app/src/main/java/com/snapknow/app/database/: AppDatabase.kt  Converters.kt  MemoryRepository.kt
app/src/main/java/com/snapknow/app/inference/: ExecuTorchModule.kt  FaceEmbeddingModel.kt  ImageVlmModel.kt  TfliteObjectDetector.kt
app/src/main/java/com/snapknow/app/nlp/: CommandParser.kt
app/src/main/java/com/snapknow/app/ui/: FaceOverlayView.kt
app/src/main/java/com/snapknow/app/voice/: AndroidSpeechOutputEngine.kt  AndroidSpeechTranscriber.kt  PiperSpeechOutputEngine.kt  SpeechAssetBridge.kt  TtsManager.kt  (+8 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+72 files in other folders)
